# signal-peptide-pred

./: .gitignore  CRF.py  README.md  benchmark_set.fasta  constants.py  crf_loss.py  data_transform.py  matthew.py  pyproject.toml  train.py
